--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,18 @@ repositories {
 
 dependencies {
     compile 'org.springframework:spring-context:3.2.6.RELEASE',
+
 			'log4j:log4j:1.2.17',
+            'org.slf4j:slf4j-api:1.7.12',
+            'org.slf4j:slf4j-log4j12:1.7.12',
+
             'dom4j:dom4j:1.6.1',
-            'org.jdom:jdom2:2.0.6'
+            'org.jdom:jdom2:2.0.6',
+
+            'com.fasterxml.jackson.core:jackson-core:2.5.3',
+            'org.codehaus.jackson:jackson-core-asl:1.9.13',
+            'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+
     testCompile group: 'junit', name: 'junit', version: '4.+'
     compile fileTree(dir: 'libs', include: '*.jar')
 }
