--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
             //db
             'org.apache.solr:solr-solrj:5.1.0',
             'org.mongodb:mongo-java-driver:3.0.1',
-            'redis.clients:jedis:2.7.2'
+            'redis.clients:jedis:2.7.2',
+            'org.apache.curator:curator-recipes:2.7.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
     compile fileTree(dir: 'libs', include: '*.jar')
